<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Universal Token System</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="studentid">Student ID:\t</string>
    <string name="submitstudentnum">\t Let\'s get started ➜ \t  </string>
    <string name="copyright">Copyright@2015 UTS_CentennialCollege</string>

    <color name="backgroundcolor">#D4DF38</color>

    <string name="issue">Issue about:</string>
    <string name="generate">\t Generate Token \t</string>
    <string name="department">Dept Name:\t</string>
    <string name="room">Room #:\t</string>
    <string name="tokenid">Token ID:\t</string>
    <string name="title_activity_current_token">CurrentToken</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_token_notification">TokenNotificationActivity</string>
    <string name="password">Password:\t</string>


</resources>
