<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/collegelogo" />

    <TextView
        android:id="@+id/txtIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/txtStuName"
        android:layout_marginTop="17dp"
        android:text="@string/issue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIssue"
        android:layout_below="@+id/txtIssue"
        android:layout_marginTop="16dp"
        android:text="@string/department"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtDepartment"
        android:layout_toEndOf="@+id/txtIssue"
        android:layout_toRightOf="@+id/txtDepartment"
        android:ems="6"
        android:inputType="number" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtStuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="25dp"
        android:text="@string/studentid"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDepartment"
        android:layout_below="@+id/txtDepartment"
        android:layout_marginTop="18dp"
        android:text="@string/room"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRoom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="#42454a"
        android:text="@string/generate"
        android:textColor="#fff" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_alignLeft="@+id/txtRoom"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="16dp"
        android:background="#42454a" />

</RelativeLayout>