<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context="com.example.universaltokensystem.MainActivity" >

 <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/collegelogo" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginBottom="55dp"
        android:background="#42454a" />

    <TextView
        android:id="@+id/StudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/StudentID"
        android:layout_alignTop="@+id/txtCamName"
        android:layout_toEndOf="@+id/txtCamName"
        android:layout_toRightOf="@+id/txtCamName"
        android:ems="6"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtCamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/StudentID"
        android:layout_alignStart="@+id/StudentID"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:text="@string/studentid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/passowrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCamName"
        android:layout_centerVertical="true"
        android:text="Passowrd:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtStudentID"
        android:layout_alignRight="@+id/StudentID"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#42454a"
        android:text="@string/submitstudentnum"
        android:textColor="#fff" />

</RelativeLayout>