<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/collegelogo" />

    <TextView
        android:id="@+id/txtStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtStuName"
        android:layout_alignRight="@+id/TextView01"
        android:layout_toRightOf="@+id/txtStuName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtStuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="19dp"
        android:text="@string/studentid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIssue"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_above="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:background="#42454a" />

    <TextView
        android:id="@+id/txtIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtStuName"
        android:layout_below="@+id/txtStuName"
        android:layout_marginTop="20dp"
        android:text="@string/tokenid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTokenId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtIssue"
        android:layout_alignRight="@+id/txtStudentId"
        android:layout_alignTop="@+id/txtIssue"
        android:layout_toRightOf="@+id/txtStuName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblDeptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIssue"
        android:layout_centerVertical="true"
        android:text="Dept Name:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtDeptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblDeptName"
        android:layout_alignRight="@+id/txtTokenId"
        android:layout_alignTop="@+id/lblDeptName"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/lblDeptName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <TextView
          android:id="@+id/txtroomno"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/textView1"
          android:layout_alignLeft="@+id/txtDeptName"
          android:layout_alignRight="@+id/txtTokenId"
          android:layout_alignTop="@+id/textView1"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/lblDeptName"
          android:layout_below="@+id/lblDeptName"
          android:layout_marginTop="16dp"
          android:text="Room No #:"
          android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>